[gd_scene load_steps=10 format=3 uid="uid://game_3d_scene"]

[ext_resource type="Script" path="res://GameUI3D.gd" id="1_logic"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_1"]
sky_top_color = Color(0.1, 0.1, 0.3, 1)
sky_horizon_color = Color(0.5, 0.2, 0.1, 1)
ground_bottom_color = Color(0.1, 0.1, 0.1, 1)

[sub_resource type="Sky" id="Sky_1"]
sky_material = SubResource("ProceduralSkyMaterial_1")

[sub_resource type="Environment" id="Environment_1"]
background_mode = 2
sky = SubResource("Sky_1")
ambient_light_source = 3
reflected_light_source = 2
tonemap_mode = 2
glow_enabled = true
glow_intensity = 1.5
glow_bloom = 0.2

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_floor"]
albedo_color = Color(0.05, 0.05, 0.1, 1)
metallic = 0.8
roughness = 0.2

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_podiumA"]
albedo_color = Color(0, 0.2, 0.8, 1)
emission_enabled = true
emission = Color(0, 0.1, 0.5, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_podiumB"]
albedo_color = Color(0.8, 0.1, 0, 1)
emission_enabled = true
emission = Color(0.5, 0, 0, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_screen"]
albedo_color = Color(0, 0, 0, 1)
emission_enabled = true
emission = Color(0.1, 0.1, 0.1, 1)

[node name="Game3D" type="Node3D"]
script = ExtResource("1_logic")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_1")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.866025, -0.433013, 0.25, 0, 0.5, 0.866025, -0.5, -0.75, 0.433013, 0, 10, 0)
shadow_enabled = true

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.965926, 0.258819, 0, -0.258819, 0.965926, 0, 3, 6)

[node name="Studio" type="Node3D" parent="."]

[node name="Floor" type="CSGBox3D" parent="Studio"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.5, 0)
size = Vector3(20, 1, 10)
material = SubResource("StandardMaterial3D_floor")

[node name="PodiumA" type="CSGBox3D" parent="Studio"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3, 0.5, 0)
size = Vector3(1.5, 1, 1)
material = SubResource("StandardMaterial3D_podiumA")

[node name="Label3D" type="Label3D" parent="Studio/PodiumA"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.6, 0.51)
text = "DRUŻYNA A"
font_size = 48
outline_size = 12

[node name="ScoreLabel" type="Label3D" parent="Studio/PodiumA"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.51)
text = "0"
font_size = 96
outline_size = 12

[node name="PodiumB" type="CSGBox3D" parent="Studio"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3, 0.5, 0)
size = Vector3(1.5, 1, 1)
material = SubResource("StandardMaterial3D_podiumB")

[node name="Label3D" type="Label3D" parent="Studio/PodiumB"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.6, 0.51)
text = "DRUŻYNA B"
font_size = 48
outline_size = 12

[node name="ScoreLabel" type="Label3D" parent="Studio/PodiumB"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.51)
text = "0"
font_size = 96
outline_size = 12

[node name="BigScreen" type="CSGBox3D" parent="Studio"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, -3)
size = Vector3(6, 3, 0.2)
material = SubResource("StandardMaterial3D_screen")

[node name="ScreenContent" type="Node3D" parent="Studio/BigScreen"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.11)

[node name="Label3D" type="Label3D" parent="Studio/BigScreen/ScreenContent"]
text = "PYTANIE"
font_size = 64
outline_size = 12
autowrap_mode = 2
width = 500.0

[node name="TimerLabel" type="Label3D" parent="Studio/BigScreen"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.8, 0)
text = "30"
font_size = 128
modulate = Color(1, 0, 0, 1)
outline_size = 20
